--- a/flipping-button.asciidoc
+++ b/flipping-button.asciidoc
@@ -6,3 +6,51 @@ We are going to create the following effect:
 
 image::http://f.cl.ly/items/0C1Q2V1X1S333c2N2V2B/3d-flipping.gif[3D flipping effect]
 
+== Step 1—Defining the HTML
+
+----
+<div class='button3d'>
+  <a href='#' class='button'>Hover me</a>
+</div>
+----
+
+== Step 2—Add the basic style
+
+----
+a {
+  text-decoration: none;
+  color: #222;
+}
+
+.button3d .button {
+  display: block;
+  padding: 1rem;
+  background: GOLD;
+  text-align: center;
+}
+----
+
+== Step 3—Define the 3D flipping effect.
+
+----
+.button3d {
+  perspective: 600;
+  cursor: pointer;
+}
+.button3d .button {
+  transition: all 0.6s ease-out;
+}
+.button3d:hover .button {
+  transform: rotateX(360deg);
+  transition: all 0.3s ease-out;
+}
+----
+
+== Result
+
+<p data-height="268" data-theme-id="0" data-slug-hash="Alytd" data-default-tab="result" data-user="makzan" class='codepen'>See the Pen <a href='http://codepen.io/makzan/pen/Alytd/'>3D Flipping button</a> by Thomas Seng Hin Mak (<a href='http://codepen.io/makzan'>@makzan</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
+<script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+
+Here is the captured screen video showing the effect.
+
+<iframe src="https://player.vimeo.com/video/141307034?loop=1&color=ff9933&byline=0&portrait=0" width="100%" height="236" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
