--- a/flipping-button.asciidoc
+++ b/flipping-button.asciidoc
@@ -54,9 +54,13 @@ a {
 
 == Result
 
+pass:[
 <p data-height="268" data-theme-id="0" data-slug-hash="Alytd" data-default-tab="result" data-user="makzan" class='codepen'>See the Pen <a href='http://codepen.io/makzan/pen/Alytd/'>3D Flipping button</a> by Thomas Seng Hin Mak (<a href='http://codepen.io/makzan'>@makzan</a>) on <a href='http://codepen.io'>CodePen</a>.</p>
 <script async src="//assets.codepen.io/assets/embed/ei.js"></script>
+]
 
 Here is the captured screen video showing the effect.
 
-<iframe src="https://player.vimeo.com/video/141307034?loop=1&color=ff9933&byline=0&portrait=0" width="100%" height="236" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+pass:[
+<iframe src="https://player.vimeo.com/video/141307034?loop=1&color=ff9933" width="500" height="236" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/141307034">3d flipping demo</a> from <a href="https://vimeo.com/makzan">Thomas Mak</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+]
