--- a/README.asciidoc
+++ b/README.asciidoc
@@ -2,6 +2,4 @@
 
 A short book about making CSS 3D effects.
 
-<<Flipping Button>>
-
-include::flipping-button.adoc[]
+By the way, this is my first attempt to write in AsciiDoc.
