--- a/README.asciidoc
+++ b/README.asciidoc
@@ -3,3 +3,14 @@
 A short book about making CSS 3D effects.
 
 By the way, this is my first attempt to write in AsciiDoc.
+
+== Building
+
+run `rake` to build book.
+
+run `rake book:build_chapter_html` to build each chapter into HTML file.
+
+== Lincense
+
+Creative Commons Attribution-NonCommercial-ShareAlike 4.0 Unported License.
+
